[package]
name = "cunw"
description = "A tiny utility that generates a file representing the structure and content of a directory. Made to easily give context to a LLM."
license-file = "MIT"
repository = "https://github.com/RemiKalbe/cunw"
homepage = "https://github.com/RemiKalbe/cunw"
readme = "README.md"
keywords = ["code", "prompt", "directory", "context", "llm"]
categories = ["command-line-utilities", "filesystem"]
version = "0.2.2"
edition = "2021"

[dependencies]
clap = { version = "=4.5.3", features = ["derive", "unicode", "wrap_help"] }
clap-verbosity-flag = "2.2.0"
colored = "2.1.0"
env_logger = "0.11.3"
futures = "0.3.30"
globset = "0.4.14"
ignore = "0.4.22"
log = "0.4.21"
miette = { version = "7.2.0", features = ["fancy"] }
rstest = "0.19.0"
tempfile = "3.10.1"
termbg = "0.5.0"
terminal-emoji = "0.4.1"
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = [
  "sync",
  "fs",
  "rt",
  "rt-multi-thread",
  "macros",
] }
walkdir = "2.5.0"
